Functionality to add a beer to the database implemented through API POST method
